--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "SocialSmartAIGenerator",
-  "displayName": "SocialSmartAIGenerator"
+  "name": "Social Smart Ai",
+  "displayName": "Social Smart Ai"
 }
