--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -79,9 +79,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.socialsmartaigenerator"
+    namespace "com.socialsmartaigenerator.ai"
     defaultConfig {
-        applicationId "com.socialsmartaigenerator"
+        applicationId "com.socialsmartaigenerator.ai"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
