--- a/ios/SocialSmartAi.xcodeproj/xcshareddata/xcschemes/SocialSmartAi.xcscheme
+++ b/ios/SocialSmartAi.xcodeproj/xcshareddata/xcschemes/SocialSmartAi.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "SocialSmartAIGenerator.app"
-               BlueprintName = "SocialSmartAIGenerator"
-               ReferencedContainer = "container:SocialSmartAIGenerator.xcodeproj">
+               BuildableName = "SocialSmartAi.app"
+               BlueprintName = "SocialSmartAi"
+               ReferencedContainer = "container:SocialSmartAi.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "SocialSmartAIGeneratorTests.xctest"
-               BlueprintName = "SocialSmartAIGeneratorTests"
-               ReferencedContainer = "container:SocialSmartAIGenerator.xcodeproj">
+               BuildableName = "SocialSmartAiTests.xctest"
+               BlueprintName = "SocialSmartAiTests"
+               ReferencedContainer = "container:SocialSmartAi.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "SocialSmartAIGenerator.app"
-            BlueprintName = "SocialSmartAIGenerator"
-            ReferencedContainer = "container:SocialSmartAIGenerator.xcodeproj">
+            BuildableName = "SocialSmartAi.app"
+            BlueprintName = "SocialSmartAi"
+            ReferencedContainer = "container:SocialSmartAi.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "SocialSmartAIGenerator.app"
-            BlueprintName = "SocialSmartAIGenerator"
-            ReferencedContainer = "container:SocialSmartAIGenerator.xcodeproj">
+            BuildableName = "SocialSmartAi.app"
+            BlueprintName = "SocialSmartAi"
+            ReferencedContainer = "container:SocialSmartAi.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
