--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/native-stack": "^7.1.0",
     "@react-navigation/stack": "^7.0.5",
+    "axios": "^1.7.9",
     "paper": "^0.12.18",
     "react": "18.2.0",
     "react-native": "^0.76.6",
