--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-permissions": "^5.2.2",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.2.0",
+    "react-native-share": "^12.0.9",
     "react-native-vector-icons": "^10.2.0",
     "rn-fetch-blob": "^0.12.0"
   },
